# autotransgal

./: .gitignore  README.md  pyproject.toml
autotransgal/: __init__.py  cli.py  config.py  diagnostics.py  hotkeys.py  input_events.py
autotransgal/pipeline/: __init__.py  capture.py  detect.py  google_fallback.py  merge.py  orchestrator.py  recognize.py  translate.py
autotransgal/ui/: overlay.py
autotransgal/util/: geometry.py
